syntax = "proto3";
import "google/protobuf/timestamp.proto";


package user;

option java_package = "com.heavyrent.grpc.user";
option java_multiple_files = true;

enum UserStatus {
  UNVERIFIED = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  BANNED = 3;
}

enum UserRole {
  UNKNOWN = 0;
  RENTER = 1;
  OWNER = 2;
  ADMIN = 3;
}

service UserGrpcService {
  rpc GetUserByPublicId (GetUserByPublicIdRequest) returns (UserGrpcResponse);
}

message GetUserByPublicIdRequest {
  string publicId = 1;
}

message UserGrpcResponse {
  string publicId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  bool isVerified = 6;
  UserStatus status = 7;
  UserRole role = 8;
  google.protobuf.Timestamp  updatedAt = 9;
}
